feature: API3 각 카테고리 이름으로 최소, 최대 가격 조회 기능 추가